añadido formulario de registro juli

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Formulario</title>
 </head>
 <body>
-    <h1><b>Formulario de registro</b></h1>
+    <h1><b>Formulario de registro de Juli</b></h1>
     <form>
         <form action="" method="get" enctype="text/plain">
 
@@ -22,9 +22,9 @@
             <p><label>Poblacion:
                 <select name="poblacion" size="1">
                 <option value="Alicante">Alicante</option>
-                <option value="madrid">Madrid</option>
-                <option value="sevilla">Sevilla</option>
-                <option value="valencia">Valencia</option>
+                <option value="madrid">Argentina</option>
+                <option value="sevilla">Mexico</option>
+                <option value="valencia">España</option>
             </select></label></p>
     
             <p><label>Descripcion:
